confs/lhawick/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: lhawick 
    labels:
        app: lhawick
spec:
    ports:
        - port: 80 
    selector:
        app: lhawick
